# TeraSim-NDE-NADE

./: .gitignore  Dockerfile  ITE.bash  ITE_remote.bash  README-viz.md  README.md  README_AWS.md  analysis.ipynb  analysis_aws.ipynb  build.py  check_observation_bug.py  communication.bash  docker-compose.yaml  dump.rdb  main_autoware_simulation.py  make.sh  pyproject.toml  requirements.txt  safetest_mcity_SUMO_main.py  safetest_mcity_cosim_main.py  safetest_mcity_cosim_main_local.py  safetest_mcity_main.py  safetest_mcity_main_AV.py  settings.py  setup.py  setup_pyarmor.py  sumo_record_aws.py  update_version.py  upload_output_aws.py  viz_runner.py
.pyarmor/: config
SumoTrajVis/: Additionals.py  Net.py  Trajectory.py  Utils.py
analysis/: get_distance_from_fcd.py  stats_utils.py  stats_utils_v2.py  visualize.py  viz_utils.py  viz_utils_v2.py
bash_files/: aws_test.sh  compress.sh  copy.sh  cosim_autoware_interrupt.sh  cosim_autoware_launch.sh  cosim_autoware_record.sh  cosim_launch_all.sh  cosim_sumo.sh  gl_test_haowei.sh  gl_test_haoyang.sh  gl_viz_runner.sh  stats.sh  sumo.sh  viz.sh
docs/: static_adversity.md
envs/: env_monitor.py  safetest_nade.py  safetest_nade_cosim.py  safetest_nade_with_av.py  safetest_nde.py  safetest_nde_sumo.py
example/: .gl_ITE.bash.swp  ITE.bash  collision_analysis_example.py  debug.py  gl_ITE.bash  gl_ITE_CAV.bash  gl_NADE.bash  gl_NADE_CAV.bash  gl_run_exp.sh  isuzu_test_highway.py  isuzu_test_intersection.py  merge_json_d2rl.py  safetest_mcity_main.py  safetest_mcity_main_AV.py  safetest_mcity_main_town10.py  safetest_mcity_main_town10_AV.py  safetest_mcitynew_main_AV.py  terasim_carla_town10.py  visualize_example.py
examples/: main_autoware_sumo_cosimulation_local.bash  main_autoware_sumo_cosimulation_remote.bash  main_autoware_sumo_cosimulation_remote_sumo.bash  main_mcityos_publish_terasim_time.py  main_mcityos_subscribe_av_planning_time.py  main_mcityos_subscribe_av_state.py  main_rosnode_abctest_pov_vru.py  main_rosnode_av_perception.py  main_rosnode_av_states.py  main_rosnode_av_tls.py  main_rosnode_sumo_states.py  main_websocket_publish_av_perception.py  main_websocket_publish_av_states.py  main_websocket_publish_av_tls.py  main_websocket_publish_terasim_status.py  (+5 more)
(+192 files in other folders)
