[build-system]
requires = ["poetry-core>=1.0.0", "Cython>=3.0.8", "setuptools", "wheel", "numpy"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "terasim_nde_nade"
version = "2024.05.31.1626"
description = "TeraSim NDE NADE package"
authors = [ "Haowei Sun <haoweis@umich.edu>",]
license = "CC BY-NC 4.0"
repository = "https://github.com/michigan-traffic-lab/TeraSim-NDE-ITE"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]

[tool.poetry.dependencies]
python = "^3.10"
Cython = "^3.0.8"
shapely = "^2.0.3"
toml = "^0.10.2"

[tool.poetry.build]
script = "build.py"
